--- a/parques.html
+++ b/parques.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Examen HTML CSS FORM</title>
+    <title>Parques</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
@@ -35,37 +35,17 @@
         <p>Regístrate en nuestra web y podrás tener información en tiempo real del estado de las zonas de esparcimiento de todo Bizkaia.</p>
         <p>Conocerás la densidad de ocupación de los parques registrados, la meteorología de la zona y el equipamiento e instalaciones que puedes encontrar allí.</p>
         <p>Además, podrás participar enviando la información que creas relevante para mejorar la información que llega a los usuarios, e incluso reportar incidencias para que las administraciones competentes puedan solucionar el problema. Por ejemplo, arreglar una parrilla o un baño público.</p>
-        <div class="formDiv">
-            <h2>Regístrate</h2>
 
-            <form action="" method="get">
-
-                <label for="name">Nombre:</label>
-                <input type="text" id="name" name="user_name" required/>
-
-                <label for="fullname">Apellidos:</label>
-                <input type="text" id="fullname" name="user_fullname" required/>
-
-                <label for="mail">E-mail:</label>
-                <input type="email" id="mail" name="user_mail" required/>
-
-                <label for="birthdate">Fecha de nacimiento:</label>
-                <input type="date" id="birthdate" name="user_name" required/>
-
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="user_password" required/>
-
-                <label for="password">Repite la contraseña:</label>
-                <input type="password" id="password" name="user_password" required/>
-
-                <label>
-                    <input class="checkbox" type="checkbox" id="checkbox" required>
-                    Acepto las <a href="#">concidiones</a>
-                </label>
-
-                <button type="submit">Registrar</button>
-
-            </form>
+        <div class="fitxa-parke">
+            <img src="" alt="">
+            <h3>Nombre del parque</h3>
+            <p>Instalaciones:</p>
+            <p>Lista de instalaciones</p>
+            <h3>Densidad de ocupación</h3>
+            <p>Datos de densidad</p>
+            <h3>Meteorología</h3>
+            <p>Datos de meteorología</p>
+        </div>
         </div>
     </main>
     <footer>
