--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
 
             </form>
         </div>
+        <div class="formDiv">
+            <p>¿Ya estás registrado?</p>
+            <button>Login</button>
+        </div>
+        <img class="logo" src="/images/NaturNet.png" alt="NaturNet">
+
     </main>
     <footer>
         <p>&copy; 2024 Aintzane Goffard</p>
