--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,6 @@
         </nav>
     </header>
     <main>
-        <section class="container">
             <h1>Contacta con nosotros</h1>
             <div class="send-mensaje">
 
@@ -63,6 +62,7 @@
             <a href="mailto:aintzagoffard@gmail.com"><img class="icon" src="/images/icons/mail.png" alt="mail"></a>
             
         </section>
+        <img class="logo" src="/images/NaturNet.png" alt="NaturNet">
     </main>
     <footer>
         <p>&copy; 2024 Aintzane Goffard</p>
