--- a/parques.html
+++ b/parques.html
@@ -32,20 +32,159 @@
     </header>
     <main>
         <h1>NaturNet</h1>
-        <p>Regístrate en nuestra web y podrás tener información en tiempo real del estado de las zonas de esparcimiento de todo Bizkaia.</p>
-        <p>Conocerás la densidad de ocupación de los parques registrados, la meteorología de la zona y el equipamiento e instalaciones que puedes encontrar allí.</p>
-        <p>Además, podrás participar enviando la información que creas relevante para mejorar la información que llega a los usuarios, e incluso reportar incidencias para que las administraciones competentes puedan solucionar el problema. Por ejemplo, arreglar una parrilla o un baño público.</p>
+        <h2>Elige tu parque</h2>
+        <select name="select">
+            <option value="value1" selected>Akarlanda</option>
+            <option value="value2">Aranguren</option>
+            <option value="value3">Gorliz</option>
+            <option value="value4">Bolunburu</option>
+            <option value="value5">Parque</option>
+            <option value="value6">Parque</option>
+            <option value="value7">Parque</option>
+            <option value="value8">Parque</option>
+            <option value="value9">Parque</option>
+            <option value="value10">Parque</option>
+            <option value="value11">Parque</option>
+            <option value="value12">Parque</option>
+        </select>
+ 
+        <p>Seleciona el parque si quieres obtener más información</p>
+            <div class="parques">
 
-        <div class="fitxa-parke">
-            <img src="" alt="">
-            <h3>Nombre del parque</h3>
-            <p>Instalaciones:</p>
-            <p>Lista de instalaciones</p>
-            <h3>Densidad de ocupación</h3>
-            <p>Datos de densidad</p>
-            <h3>Meteorología</h3>
-            <p>Datos de meteorología</p>
-        </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/1.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/2.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/3.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/4.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/5.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/6.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/7.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/8.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/9.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/10.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/11.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+                <div class="fitxa-parke">
+                    <img class="imgP" src="/images/parques/12.png" alt="">
+                    <h3>Nombre del parque</h3>
+                    <p>Instalaciones:</p>
+                    <p>Lista de instalaciones</p>
+                    <h3>Densidad de ocupación</h3>
+                    <p>Datos de densidad</p>
+                    <h3>Meteorología</h3>
+                    <p>Datos de meteorología</p>
+                </div>
+
+            </div>
         </div>
     </main>
     <footer>
