--- a/incidencias.html
+++ b/incidencias.html
@@ -31,7 +31,8 @@
         </nav>
     </header>
     <main>
-        <section class="container">
+        <img class="logo" src="/images/NaturNet.png" alt="NaturNet">
+
             <h1>Reportar una incidencia</h1>
             <p>Describa lo mejor posible y lo más detalladamente posible la incidencia que quiere reportar.</p>
             <p>Si es posible, mande una imagen y la ubicación para agilizar el proceso.</p>
@@ -64,7 +65,7 @@
                     <button type="submit">Enviar mensaje</button>
 
                 </form>
-            </div>
+
 
 
         <section class="contact-links">
