--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </nav>
     </header>
     <main>
+        <img class="logo" src="/images/NaturNet.png" alt="NaturNet">
         <h1>NaturNet</h1>
         <p>Regístrate en nuestra web y podrás tener información en tiempo real del estado de las zonas de esparcimiento de todo Bizkaia.</p>
         <p>Conocerás la densidad de ocupación de los parques registrados, la meteorología de la zona y el equipamiento e instalaciones que puedes encontrar allí.</p>
@@ -55,8 +56,8 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="user_password" required/>
 
-                <label for="password">Repite la contraseña:</label>
-                <input type="password" id="password" name="user_password" required/>
+                <label for="passwordC">Repite la contraseña:</label>
+                <input type="passwordC" id="passwordC" name="user_passwordC" required/>
 
                 <label>
                     <input class="checkbox" type="checkbox" id="checkbox" required>
@@ -69,9 +70,9 @@
         </div>
         <div class="formDiv">
             <p>¿Ya estás registrado?</p>
-            <button>Login</button>
+            <button id="login-btn">Login</button>
         </div>
-        <img class="logo" src="/images/NaturNet.png" alt="NaturNet">
+
 
     </main>
     <footer>
