--- a/parques.html
+++ b/parques.html
@@ -31,8 +31,8 @@
         </nav>
     </header>
     <main>
-        <h1>NaturNet</h1>
-        <h2>Elige tu parque</h2>
+        <img class="logo" src="/images/NaturNet.png" alt="NaturNet">
+        <h1>Parques</h1>
         <select name="select">
             <option value="value1" selected>Akarlanda</option>
             <option value="value2">Aranguren</option>
