--- a/parques.html
+++ b/parques.html
@@ -38,14 +38,14 @@
             <option value="value2">Aranguren</option>
             <option value="value3">Gorliz</option>
             <option value="value4">Bolunburu</option>
-            <option value="value5">Parque</option>
-            <option value="value6">Parque</option>
-            <option value="value7">Parque</option>
-            <option value="value8">Parque</option>
-            <option value="value9">Parque</option>
-            <option value="value10">Parque</option>
-            <option value="value11">Parque</option>
-            <option value="value12">Parque</option>
+            <option value="value5">Kolitza</option>
+            <option value="value6">El Calero</option>
+            <option value="value7">Basinagre</option>
+            <option value="value8">El Cerrillo</option>
+            <option value="value9">Fuente de la Choza</option>
+            <option value="value10">Zumeltza</option>
+            <option value="value11">Landederra</option>
+            <option value="value12">Pozalagua</option>
         </select>
  
         <p>Seleciona el parque si quieres obtener más información</p>
