--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,7 @@
 
                     <label>
                         <input class="checkbox" type="checkbox" id="checkbox" required>
-                        Acepto las <a href="#">concidiones</a>
+                        Acepto las <a href="#">condiciones</a>
                     </label>
 
                     <button type="submit">Enviar mensaje</button>
