--- a/incidencias.html
+++ b/incidencias.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Incidencias</title>
+    <title>Envío de incidencias sobre el estado de los parques de esparcimiento de Bizkaia</title>
+    <meta name="description" content="Página de envío y reporte de incidencias sobre el estado de los parques de esparcimiento y zonas de parrilla en Bizkaia a la administración">
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar" id="navbar">
             <ul>
                 <li class="navbar-link"><a href="/index.html">Inicio</a></li>
                 <li class="navbar-link"><a href="/parques.html">Parques</a></li>
                 <li class="navbar-link"><a href="/incidencias.html">Incidencias</a></li>
-                <li class="navbar-link"><a href="/contacto.html">Contacto</a></li>            </ul>
+                <li class="navbar-link"><a href="/contacto.html">Contacto</a></li>            
+            </ul>
         </nav>
-        <div class="hamburger">
+        <div class="hamburger" id="hamburger">
             <div class="bar -top"></div>
             <div class="bar -mid"></div>
             <div class="bar -bottom"></div>
