--- a/login.html
+++ b/login.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Examen HTML CSS FORM</title>
+    <title>Login para acceder a la información sobre los parques de Bizkaia</title>
+    <meta name="description" content="Login para tener acceso a la información del estado de ocupación de los parques de esparcimiento y zonas de parrilla en Bizkaia en tiempo real con información sobre las instalaciones, la meteorología y la localización">
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar" id="navbar">
             <ul>
                 <li class="navbar-link"><a href="/index.html">Inicio</a></li>
                 <li class="navbar-link"><a href="/parques.html">Parques</a></li>
                 <li class="navbar-link"><a href="/incidencias.html">Incidencias</a></li>
-                <li class="navbar-link"><a href="/contacto.html">Contacto</a></li>            </ul>
+                <li class="navbar-link"><a href="/contacto.html">Contacto</a></li>            
+            </ul>
         </nav>
-        <div class="hamburger">
+        <div class="hamburger" id="hamburger">
             <div class="bar -top"></div>
             <div class="bar -mid"></div>
             <div class="bar -bottom"></div>
@@ -36,7 +38,7 @@
         <div class="formDiv">
             <h2>Login</h2>
 
-            <form action="" method="get">
+            <form action="" id="login-form" method="get">
 
                 <label for="mail">E-mail:</label>
                 <input type="email" id="mail" name="user_mail" required/>
@@ -49,7 +51,7 @@
                     Acepto las <a href="#">concidiones</a>
                 </label>
 
-                <button type="submit">Registrar</button>
+                <button type="submit">Iniciar sesión</button>
 
             </form>
         </div>
@@ -59,5 +61,6 @@
         <p>&copy; 2024 Aintzane Goffard</p>
     </footer>
     <script src="/js/navbar.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
