--- a/parques/Basinagre.html
+++ b/parques/Basinagre.html
@@ -38,10 +38,10 @@
             <option value="value1">Akarlanda</option>
             <option value="value2">Aranguren</option>
             <option value="value3">Gorliz</option>
-            <option value="value4" selected>Bolunburu</option>
+            <option value="value4">Bolunburu</option>
             <option value="value5">Kolitza</option>
             <option value="value6">El Calero</option>
-            <option value="value7">Basinagre</option>
+            <option value="value7" selected>Basinagre</option>
             <option value="value8">El Cerrillo</option>
             <option value="value9">Fuente de la Choza</option>
             <option value="value10">Zumeltza</option>
@@ -50,24 +50,24 @@
         </select>
  
         <p>Seleciona el parque si quieres obtener más información</p>
-        <h1>Bolunburu</h1>
+        <h1>Basinagre</h1>
             <div class="parque-detalle">
 
                 <div class="imagen-detalle">
-                    <img class="imgPD" src="/images/parques/4.png" alt="">
+                    <img class="imgPD" src="/images/parques/7.png" alt="">
                 </div>
 
 
                 <div class="detalle-texto">
-                    <h3>Bolunburu</h3>
+                    <h3>Basinagre</h3>
                     <p>Instalaciones:</p>
-                    <p>Aparcamiento, Bar, Parque de juegos infantiles, mesas, papeleras, Instalaciones deportivas, servicios WC, zona de sombra</p>
+                    <p>Aparcamiento, Asadores, Mesas, Fuentes, XXX</p>
                     <h3>Densidad de ocupación:</h3>
                     <p>Media</p>
                     <h3>Meteorología:</h3>
-                    <p>Sol y nubes</p>
+                    <p>Arcoiris</p>
                     <h3>Localización:</h3>
-                    <p>Zalla</p>
+                    <p>XXX</p>
                 </div>
 
 
