--- a/parques.html
+++ b/parques.html
@@ -54,108 +54,108 @@
             <div class="parques">
 
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/1.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Akarlanda</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/2.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Aranguren</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/3.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Gorliz</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/4.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Bolunburu</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/5.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Kolitza</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/6.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>El Calero</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/7.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Basinagre</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/8.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>El Cerrillo</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/9.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Fuente de la Choza</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/10.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Zumeltza</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/11.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Landederra</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
                     <p>Datos de meteorología</p>
                 </div>
 
-                <div class="fitxa-parke">
+                <div class="fitxa-parke" @click="hrefLocation()">
                     <img class="imgP" src="/images/parques/12.png" alt="">
-                    <h3>Nombre del parque</h3>
+                    <h3>Pozalagua</h3>
                     <h3>Densidad de ocupación</h3>
                     <p>Datos de densidad</p>
                     <h3>Meteorología</h3>
@@ -170,5 +170,6 @@
     </footer>
     <script src="/js/navbar.js"></script>
     <script src="/js/select.js"></script>
+    <script src="/js/parque.js"></script>
 </body>
 </html>
